improving unit test coverage (LambdaStack)