@@ -1,6 +1,5 @@
 package org.familydirectory.cdk.cognito;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import org.familydirectory.assets.lambda.function.models.LambdaFunctionModel;
@@ -54,8 +53,6 @@ import software.amazon.awscdk.services.route53.PublicHostedZone;
 import software.amazon.awscdk.services.route53.PublicHostedZoneAttributes;
 import software.amazon.awscdk.services.route53.RecordTarget;
 import software.amazon.awscdk.services.route53.targets.UserPoolDomainTarget;
-import software.amazon.awscdk.services.ses.EmailIdentity;
-import software.amazon.awscdk.services.ses.IEmailIdentity;
 import software.amazon.awscdk.services.ssm.IStringParameter;
 import software.amazon.awscdk.services.ssm.StringParameter;
 import software.amazon.awssdk.regions.Region;
@@ -65,7 +62,6 @@ import static java.lang.Boolean.TRUE;
 import static java.util.Collections.singletonList;
 import static java.util.Optional.ofNullable;
 import static software.amazon.awscdk.Duration.days;
-import static software.amazon.awscdk.Fn.importValue;
 import static software.amazon.awscdk.services.cognito.UserPoolClientIdentityProvider.COGNITO;
 import static software.amazon.awscdk.services.cognito.VerificationEmailStyle.LINK;
 
@@ -107,12 +103,9 @@ class FamilyDirectoryCognitoStack extends Stack {
                                                                                      .zoneName(FamilyDirectoryDomainStack.HOSTED_ZONE_NAME)
                                                                                      .build();
         final IPublicHostedZone hostedZone = PublicHostedZone.fromPublicHostedZoneAttributes(this, FamilyDirectoryDomainStack.HOSTED_ZONE_RESOURCE_ID, hostedZoneAttrs);
-        final IEmailIdentity emailIdentity = EmailIdentity.fromEmailIdentityName(this, FamilyDirectorySesStack.SES_EMAIL_IDENTITY_RESOURCE_ID,
-                                                                                 importValue(FamilyDirectorySesStack.SES_EMAIL_IDENTITY_NAME_EXPORT_NAME));
 
 //  Cognito Trigger Lambda Functions
-        final Map<LambdaFunctionModel, Function> cognitoTriggerLambdaFunctions = LambdaFunctionConstructUtility.constructFunctionMap(this, Arrays.asList(TriggerFunction.values()), hostedZone,
-                                                                                                                                     emailIdentity, null, null);
+        final Map<LambdaFunctionModel, Function> cognitoTriggerLambdaFunctions = LambdaFunctionConstructUtility.constructFunctionMap(this, List.of(TriggerFunction.values()), hostedZone, null, null);
 
         final UserPoolProps userPoolProps = UserPoolProps.builder()
                                                          .accountRecovery(AccountRecovery.EMAIL_ONLY)
